--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-# Add your Python dependencies here
-torch
-torchvision
+torch==2.4.0
+torchvision==0.19.0
+numpy==1.24.3
+Pillow==9.5.0
+matplotlib==3.7.2
